Bug 34822 - Blank display on Toshiba laptop C670D-10C using AMD E-240 Palm chip
Summary: Blank display on Toshiba laptop C670D-10C using AMD E-240 Palm chip
Status: RESOLVED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-05-10 14:56 UTC by Anisse Astier
Modified: 2012-04-29 13:02 UTC (History)
2 users (show)

See Also:
Kernel Version: 2.6.39-rc7
Subsystem:
Regression: No
Bisected commit-id:


Attachments
dmesg using Linus' HEAD of May 10th 2011 (47.32 KB, text/plain)
2011-05-10 14:56 UTC, Anisse Astier
Details
Xorg log starting the X server manually in verbose mode (35.23 KB, text/plain)
2011-05-10 14:58 UTC, Anisse Astier
Details
dmesg log with drm.debug=1 loglevel=9 (408.47 KB, text/plain)
2011-05-10 15:05 UTC, Anisse Astier
Details
dmesg log with drm.debug=4 (62.45 KB, text/plain)
2011-05-10 15:21 UTC, Anisse Astier
Details
vbios rom in /sys/bus/pci/devices/0000:00:01.0 (56.50 KB, application/octet-stream)
2011-05-10 15:59 UTC, Anisse Astier
Details
Dmesg with drm-radeon-testing as of 05/26 (71.76 KB, text/plain)
2011-05-26 16:57 UTC, Anisse Astier
Details
fix handling of DP to LVDS bridges (2.53 KB, patch)
2011-05-26 22:19 UTC, Alex Deucher
Details | Diff
additional patch (682 bytes, patch)
2011-05-26 23:43 UTC, Alex Deucher
Details | Diff
Xorg log with drm-radeon-testing as of 05/26 (no patch applied) (45.98 KB, text/plain)
2011-05-27 10:34 UTC, Anisse Astier
Details
Dmesg with 1st patch applied (73.34 KB, text/plain)
2011-05-27 10:45 UTC, Anisse Astier
Details
xrandr output before and after first patch (9.18 KB, text/plain)
2011-05-27 10:48 UTC, Anisse Astier
Details
Dmesg with 3.0-rc4 (70.28 KB, text/plain)
2011-06-22 14:02 UTC, Anisse Astier
Details

Description Anisse Astier 2011-05-10 14:56:23 UTC
Created attachment 57132 [details]
dmesg using Linus' HEAD of May 10th 2011

On a Toshiba laptop using an AMD Fusion GPU (SoC: E-240), I am unable to have screen turn on with KMS. It stays blank, even when starting the X server.

I tried with 2.6.38.5, Today's Linus tree, Yesterday's drm-2.6/drm-next, all to the same result.

Here is the lspci:

00:00.0 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1510]
00:01.0 VGA compatible controller [0300]: ATI Technologies Inc Device [1002:9803]
00:11.0 SATA controller [0106]: ATI Technologies Inc SB700/SB800 SATA Controller [AHCI mode] [1002:4391] (rev 40)
00:12.0 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller [1002:4397]
00:12.2 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB EHCI Controller [1002:4396]
00:13.0 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller [1002:4397]
00:13.2 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB EHCI Controller [1002:4396]
00:14.0 SMBus [0c05]: ATI Technologies Inc SBx00 SMBus Controller [1002:4385] (rev 42)
00:14.1 IDE interface [0101]: ATI Technologies Inc SB700/SB800 IDE Controller [1002:439c] (rev 40)
00:14.2 Audio device [0403]: ATI Technologies Inc SBx00 Azalia (Intel HDA) [1002:4383] (rev 40)
00:14.3 ISA bridge [0601]: ATI Technologies Inc SB700/SB800 LPC host controller [1002:439d] (rev 40)
00:14.4 PCI bridge [0604]: ATI Technologies Inc SBx00 PCI to PCI Bridge [1002:4384] (rev 40)
00:15.0 PCI bridge [0604]: ATI Technologies Inc Device [1002:43a0]
00:15.1 PCI bridge [0604]: ATI Technologies Inc Device [1002:43a1]
00:15.2 PCI bridge [0604]: ATI Technologies Inc Device [1002:43a2]
00:16.0 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB OHCI0 Controller [1002:4397]
00:16.2 USB Controller [0c03]: ATI Technologies Inc SB700/SB800 USB EHCI Controller [1002:4396]
00:18.0 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1700] (rev 43)
00:18.1 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1701]
00:18.2 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1702]
00:18.3 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1703]
00:18.4 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1704]
00:18.5 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1718]
00:18.6 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1716]
00:18.7 Host bridge [0600]: Advanced Micro Devices [AMD] Device [1022:1719]
03:00.0 Network controller [0280]: Realtek Semiconductor Co., Ltd. Device [10ec:8176] (rev 01)
04:00.0 Ethernet controller [0200]: Realtek Semiconductor Co., Ltd. RTL8101E/RTL8102E PCI Express Fast Ethernet controller [10ec:8136] (rev 05)
Comment 1 Anisse Astier 2011-05-10 14:58:40 UTC
Created attachment 57142 [details]
Xorg log starting the X server manually in verbose mode
Comment 2 Anisse Astier 2011-05-10 15:05:27 UTC
Created attachment 57152 [details]
dmesg log with drm.debug=1 loglevel=9
Comment 3 Anisse Astier 2011-05-10 15:21:33 UTC
Created attachment 57162 [details]
dmesg log with drm.debug=4
Comment 4 Anisse Astier 2011-05-10 15:48:22 UTC
I tried booting with video=1600x900, 1440x900, 1280x800 and 1024x768 and none of them changed anything.

I didn't specify it, but screen is blank AND backlight is off.
Comment 5 Anisse Astier 2011-05-10 15:59:30 UTC
Created attachment 57182 [details]
vbios rom in /sys/bus/pci/devices/0000:00:01.0
Comment 6 Alex Deucher 2011-05-10 16:01:56 UTC
travis DP to LVDS bridges are not supported yet.  I'll update this bug when I have patches ready.
Comment 7 Alex Deucher 2011-05-26 15:45:37 UTC
There is initial support for DP bridges in drm-radeon-testing:
http://git.kernel.org/?p=linux/kernel/git/airlied/drm-2.6.git;a=shortlog;h=refs/heads/drm-radeon-testing
Comment 8 Anisse Astier 2011-05-26 16:57:21 UTC
Created attachment 59612 [details]
Dmesg with drm-radeon-testing as of 05/26

Just tested drm-radeon-testing, unfortunately, it seems like there is no change, screen is still blank, no backlight. 

Would it be possible that the radeon_encoder->encoder_id information is wrong? And that there is no DP bridge ?
Comment 9 Alex Deucher 2011-05-26 17:10:03 UTC
(In reply to comment #8)
> Would it be possible that the radeon_encoder->encoder_id information is
> wrong?
> And that there is no DP bridge ?

No it's correct.  You can see the DPCD for the bridge printed and the link seems to train ok.
Comment 10 Alex Deucher 2011-05-26 21:52:25 UTC
Can you attach your xorg log and the output of xrandr --verbose from the new kernel?
Comment 11 Alex Deucher 2011-05-26 22:19:20 UTC
Created attachment 59622 [details]
fix handling of DP to LVDS bridges

This patch on top of drm-radeon-testing should get you up and running.
Comment 12 Alex Deucher 2011-05-26 23:43:54 UTC
Created attachment 59642 [details]
additional patch

If the patch in comment 11 doesn't work, you can try this one as well on top of the patch in comment 11.
Comment 13 Anisse Astier 2011-05-27 10:34:38 UTC
Created attachment 59652 [details]
Xorg log with drm-radeon-testing as of 05/26 (no patch applied)
Comment 14 Anisse Astier 2011-05-27 10:45:53 UTC
Created attachment 59662 [details]
Dmesg with 1st patch applied

As you asked, I tried with first patch, then second patch on top of it.

No change on display (still blank, no backlight) in any case.

But we can see here a difference in modesets shown  kernel log, before and after first patch.
Comment 15 Anisse Astier 2011-05-27 10:48:09 UTC
Created attachment 59672 [details]
xrandr output before and after first patch

Here you can see the output of xrandr before and after applying patch in comment 11 . Adding patch in comment 12 didn't change anything.
Comment 16 Florian Mickler 2011-06-21 11:57:00 UTC
A patch referencing this bug report has been merged in v3.0-rc4:

commit f89931f345f26c43b109191fbfcfa506781111c0
Author: Alex Deucher <alexdeucher@gmail.com>
Date:   Mon Jun 13 17:13:35 2011 -0400

    drm/radeon/kms: fix handling of DP to LVDS bridges
Comment 17 Anisse Astier 2011-06-21 14:43:04 UTC
It's the same patch as in comment 11 which I reported tested and non-working in comment 14 . I just tested 3.0-rc4, screen is still blank and/or no backlight.

The only improvement (difference ?) seems to be in modelines detection.
Comment 18 Alex Deucher 2011-06-21 18:47:40 UTC
There are a number of additional fixes in 3.0-rc4.  Do any of them help?
Comment 19 Anisse Astier 2011-06-22 14:02:24 UTC
Created attachment 63192 [details]
Dmesg with 3.0-rc4

Alas, no improvement. Just like I said in comment 14, native resolution(1600x900) is now detected and in the default modeline.

See this dmesg log with 3.0-rc4 for more information. Is there anything else I can provide/do ?
Comment 20 Alex Deucher 2011-08-29 21:06:20 UTC
Does the patch from comment 12 help with a newer kernel (3.1)?
Comment 21 Anisse Astier 2011-08-30 10:12:34 UTC
I tried the patch from comment 12 on top of linus' tree (HEAD: 0f43dd546d991ca260d8a72d07f). I tried without the patch.
Unfortunately, there was no change, and screen is still black.
Comment 22 Anisse Astier 2012-04-29 13:02:40 UTC
This should have been fixed by now.

Reference: https://bugs.freedesktop.org/show_bug.cgi?id=41569

Note You need to log in before you can comment on or make changes to this bug.